# joplin-web

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  docker-start.sh  docker.md  manage.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start.sh  system.md
joplin-front/: README.md  package-lock.json  package.json
joplin-front/public/: index.html
joplin-front/src/: App.vue  main.js  router.js  store.js
joplin-front/src/components/: Books.vue  NavBar.vue  Notes.vue  Tag.vue  Tags.vue  TakeNote.vue
joplin-front/src/core/: Errors.js  Form.js
joplin-front/src/modules/folders/: actions.js  api.js  getters.js  mutations.js  types.js
joplin-front/src/modules/folders/components/: Book.vue  Books.vue
joplin-front/src/modules/notes/: actions.js  api.js  getters.js  mutations.js  store.js  types.js
joplin-front/src/modules/notes/components/: Note.vue  Notes.vue  TakeNote.vue  Task.vue
joplin-front/src/modules/tags/: actions.js  api.js  getters.js  mutations.js  routes.js  store.js  types.js
joplin-front/src/modules/tags/components/: Tag.vue  Tags.vue
joplin-vue/: README.md  package-lock.json  package.json  vue.config.js
joplin-vue/public/: index.html
joplin-vue/src/: App.vue  main.js  router.js  store.js
joplin-vue/src/components/: NavBar.vue
joplin-vue/src/modules/folders/: getters.js  mutations.js  routes.js  store.js
joplin-vue/src/modules/folders/components/: Book.vue  Books.vue  Folder.vue  Folders.vue  index.js
joplin-vue/src/modules/notes/: actions.js  api.js  getters.js  index.js  mutations.js  routes.js  store.js
joplin-vue/src/modules/notes/components/: Notes.vue  Tag.vue  TakeNote.vue  index.js
joplin-vue/src/modules/tags/: getters.js  mutations.js  routes.js  store.js
joplin-vue/src/modules/tags/components/: Tags.vue  index.js
joplin_web/: __init__.py  app.py  env.docker.sample  env.sample  joplin.py  models.py  settings.py  urls.py  views.py  wsgi.py
joplin_web/api/: permissions.py  serializers.py  urls.py  views.py
joplin_web/management/commands/: editbook.py  editnote.py  mkbook.py  mknote.py  tag.py  version.py
joplin_web/static/css/: chunk-vendors.css
joplin_web/static/js/: app.js  app.js.map  chunk-vendors.js  chunk-vendors.js.map
joplin_web/templates/: 404.html  500.html  index.html
