[metadata]
name=joplin_web
description="Joplin web"
author=FoxMaSk
author_email=foxmask@protonmail.com
maintainer=FoxMaSk
maintainer_email=foxmask@protonmail.com
url=https://github.com/foxmask/joplin-web
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=joplin web editor
download_url="https://github.com/foxmask/joplin-web/archive/joplin-web-" + version + ".zip",
version=attr: joplin_web.__version__

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

[options]
zip_safe=false

include_package_data=true

install_requires=
	requests==2.21.0
	django-filter==2.1.0
	djangorestframework==3.9.1
	Markdown==3.0.1
	django-environ==0.4.5
	django-cors-headers==2.4.0
	joplin-api==1.2.3

[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
