[metadata]
name=joplin_web
description="Joplin web"
author=FoxMaSk
author_email=foxmask@protonmail.com
maintainer=FoxMaSk
maintainer_email=foxmask@protonmail.com
url=https://github.com/foxmask/joplin-web
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=joplin web editor
download_url="https://github.com/foxmask/joplin-web/archive/joplin-web-" + version + ".zip",
version=2.0.0


classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP


[options]
zip_safe=false

include_package_data=true

install_requires=
    aiofiles==0.4.0
    jinja2==2.10.1
    joplin-api==1.3.1
    starlette==0.12.0
    uvicorn==0.7.1

[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
