[metadata]
name=joplin_web
description="Joplin web"
author=FoxMaSk
author_email=foxmask@protonmail.com
maintainer=FoxMaSk
maintainer_email=foxmask@protonmail.com
url=https://github.com/foxmask/joplin-web
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=joplin web editor
version= attr: joplin_web.__version__
download_url="https://github.com/foxmask/joplin-web/archive/joplin-web-" + version + ".zip",
classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP


[options]
zip_safe=false

include_package_data=true

install_requires=
    aiofiles==0.4.0
    jinja2==2.11.1
    joplin-api==1.5.6
    starlette==0.13.2
    uvicorn==0.11.3

[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
